import org.gradle.api.tasks.testing.logging.TestExceptionFormat

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
	id 'org.sonarqube' version '4.0.0.2929'
}

// Select what reports Jacoco generates and where to put them
jacocoTestReport {
	reports {
		xml.required = true
		xml.outputLocation = file("${buildDir}/jacoco/test-report.xml")

		csv.required = false

		html.outputLocation = file("${buildDir}/jacoco/html")
	}
}

sonarqube {
	properties {
		property "sonar.projectKey", "seng302-2024-team600"
		property "sonar.projectName", "seng302-2024-team600"
		property "sonar.sourceEncoding", "UTF-8"
		property "sonar.host.url", "https://sonarqube.csse.canterbury.ac.nz"
		property "sonar.login", "$System.env.SONARQUBE_TOKEN"
		property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/jacoco/test-report.xml"
		// TODO TEST THIS SPRINT 4
		//property "sonar.java.source", "17"
		//property "sonar.java.target", "17

		// For pipelines run for a branch build only
		if (System.env.CI_MERGE_REQUEST_IID == null || System.env.CI_MERGE_REQUEST_IID.trim().isEmpty()) {
			property "sonar.branch.name", "${System.env.CI_COMMIT_REF_NAME}"
		}
		// For pipelines run as part of a merge request
		else {
			property "sonar.pullrequest.key", "${System.env.CI_MERGE_REQUEST_IID}"
			property "sonar.pullrequest.branch", "${System.env.CI_MERGE_REQUEST_SOURCE_BRANCH_NAME}"
			property "sonar.pullrequest.base", "${System.env.CI_MERGE_REQUEST_TARGET_BRANCH_NAME}"
		}
	}
}

group = 'team-600'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// Spring Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// JWT
	implementation 'com.h2database:h2'

	// MariaDB (deployment db)
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'

	// Bootstrap + webjars
	implementation 'org.webjars:bootstrap:5.3.3'

    // Microsoft Azure Content Moderation
    implementation 'com.microsoft.azure.cognitiveservices:azure-cognitiveservices-contentmoderator:1.0.2-beta'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// Cucumber dependencies
	testImplementation 'io.cucumber:cucumber-java:7.15.0'
	testImplementation 'io.cucumber:cucumber-spring:7.15.0'
	testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.15.0'
	testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'
}

tasks.named("check") {
	dependsOn test, integration, cucumber
}

tasks.named('test') {
	// Use JUnit Platform for unit tests.
	useJUnitPlatform()
	filter {
		includeTestsMatching "nz.ac.canterbury.seng302.gardenersgrove.unit.*"
	}
	testLogging {
		events "passed", "skipped", "failed", "standardOut", "standardError"
	}

	// The unitTestReport will be run after the unit test task has completed
	finalizedBy "unitTestReport"

}

tasks.register("integration", Test) {
	useJUnitPlatform()
	filter{
		includeTestsMatching "nz.ac.canterbury.seng302.gardenersgrove.integration.*"
	}
	testLogging {
		events "passed", "skipped", "failed", "standardOut", "standardError"
	}

	// The integrationTestReport will be run after the integration test task has completed
	finalizedBy "integrationTestReport"
}

tasks.register("cucumber", Test) {
	group = "verification"
	testLogging.showStandardStreams = true
	useJUnitPlatform()
	filter {
		includeTestsMatching "nz.ac.canterbury.seng302.gardenersgrove.cucumber.*"
	}
	testLogging {
		events "passed", "skipped", "failed", "standardOut", "standardError"
		exceptionFormat TestExceptionFormat.FULL
	}
}

tasks.register("unitTestReport", JacocoReport) { // Generate a report for unit tests
	group = 'verification'

	onlyIf { // Allow the report to be skipped when -PskipTestReport is passed via commandline
		return !project.hasProperty('skipTestReport')
	}

	dependsOn test

	executionData project.tasks.test

	sourceDirectories.setFrom(project.files(project.sourceSets.main.allSource.srcDirs))
	classDirectories.setFrom(project.sourceSets.main.output)

	reports {
		// The jacoco coverage report will ge generated in the destination below
		html.destination file("${buildDir}/reports/coverage/test")
	}
}

tasks.register("integrationTestReport", JacocoReport) { // Generate a report for integration tests
	group = 'verification'

	onlyIf { // Allow the report to be skipped when -PskipTestReport is passed via commandline
		return !project.hasProperty('skipTestReport')
	}

	dependsOn integration

	executionData project.tasks.integration

	sourceDirectories.setFrom(project.files(project.sourceSets.main.allSource.srcDirs))
	classDirectories.setFrom(project.sourceSets.main.output)

	reports {
		// The jacoco coverage report will ge generated in the destination below
		html.destination file("${buildDir}/reports/coverage/integration")
	}
}

tasks.register("cucumberTestReport", JacocoReport) { // Generate a report for cucumber tests
	group = 'verification'

	onlyIf { // Allow the report to be skipped when -PskipTestReport is passed via commandline
		return !project.hasProperty('skipTestReport')
	}

	dependsOn cucumber

	executionData project.tasks.cucumber

	sourceDirectories.setFrom(project.files(project.sourceSets.main.allSource.srcDirs))
	classDirectories.setFrom(project.sourceSets.main.output)

	reports {
		// The jacoco coverage report will ge generated in the destination below
		html.destination file("${buildDir}/reports/coverage/cucumber")
	}
}

jacocoTestReport { // Generate a report for all generated test data
	onlyIf { // Allow the report to be skipped when -PskipTestReport is passed via commandline
		return !project.hasProperty('skipTestReport')
	}

	mustRunAfter test, integration, cucumber

	executionData fileTree(project.rootDir) {
		include '**/*.exec'
	}
	reports {
		html.destination file("${buildDir}/reports/coverage/overall")
	}
}

tasks.named("unitTestReport").configure { finalizedBy "jacocoTestReport" }
tasks.named("integrationTestReport").configure { finalizedBy "jacocoTestReport" }
tasks.named("cucumberTestReport").configure { finalizedBy "jacocoTestReport" }
